--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axon-secure",
-  "description": "High-level messaging & socket patterns with optionional encryption implemented in pure js",
+  "description": "High-level messaging & socket patterns with optional encryption implemented in pure js",
   "version": "2.0.3",
   "author": "Marcello Gesmundo <mgesmundo@yoovant.com>",
   "dependencies": {
